# regolf

./: .gitignore  .python-version  README.md  __init__.py  grpo.py  hello_modal.py  pyproject.toml  regex_golf_classic.json  requirements.txt  validate_data.py  validator.py
data/: data_gen.py  data_gen_hf.py  data_gen_hf_parallel.py  data_gen_puzzles.py  data_validator.py  prompt.txt  validate_data.py
data/generated_data/: intermediate_results_0.json  regex_golf_dataset.json  regex_golf_dataset_puzzle.json
data/generated_data/temp_results/: checkpoint_000500.json  checkpoint_001000.json  checkpoint_001500.json  result_000970.json  result_000972.json  result_000973.json  result_000974.json  result_000975.json  result_000976.json  result_000978.json  result_000980.json  result_000982.json  result_000983.json  result_000984.json  result_000985.json  result_000986.json  result_000987.json  (+1943 more)
data/generation/: data_gen_hf_parallel.py  data_gen_puzzles.py  regex_golf_puzzles
data/validated_data/: _validation_stats.json  intermediate_results_0.json  regex_golf_dataset.json  regex_golf_dataset_puzzle.json
data/validation/: data_validator.py  data_validator_entry_progress.py  data_validator_fast.py  data_validator_parallel.py  data_validator_parallel_improved.py
prompts/agent_prompts/: __init__.py  developer_message.py  system_message.py  user_message.py
regex/: __init__.py  model_output_parser.py  regex_ast_validation.py  regex_evaluator.py  reward_calculator.py
regex/tests/: test_regex_ast_validation.py  test_regex_pipeline.py
regolf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1 files in other folders)
