[project]
name = "regolf"
version = "0.1.0"
description = "Regex Golf training with GRPO on OpenAI OSS models"
authors = [
    { name = "Michelle Wei" }
]
requires-python = ">=3.11"

# Runtime dependencies. You can add packages with `uv add <package>` or manually list them here.
dependencies = [
    "modal>=1.1.1",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "wandb>=0.16.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "jsonschema>=4.19.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["regex", "data", "prompts"]

[tool.pytest.ini_options]
testpaths = ["regex/tests", "data/validation/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
